--- a/scss/_navMob.scss
+++ b/scss/_navMob.scss
@@ -43,7 +43,7 @@
     #navContent {
       display: flex;
       flex-direction: column;
-      row-gap: 4dvh;
+      row-gap: 40px;
       width: 0;
       opacity: 0;
       background-color: #4d8b55;
