--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,7 @@
 #navMob #menu #navContent {
   display: flex;
   flex-direction: column;
-  row-gap: 4dvh;
+  row-gap: 40px;
   width: 0;
   opacity: 0;
   background-color: #4d8b55;
@@ -172,7 +172,7 @@
 }
 @media (min-width: 300px) and (max-width: 399px) {
   #topONE {
-    height: 600px;
+    height: 650px;
   }
 }
 @media (min-width: 399px) and (max-width: 767px) {
@@ -525,70 +525,59 @@
 #topTHREE {
   display: flex;
   flex-direction: row;
-  position: relative;
-  width: inherit;
-  height: auto;
-  background-color: rgb(255, 255, 255);
+  column-gap: 90px;
+  width: 100%;
+  height: fit-content;
+  padding: 30px 20px 30px 20px;
+  background-color: #ffffff;
 }
 @media (min-width: 300px) and (max-width: 399px) {
   #topTHREE {
-    display: flex;
     flex-direction: column;
+    row-gap: 90px;
   }
 }
 @media (min-width: 399px) and (max-width: 767px) {
   #topTHREE {
-    display: flex;
     flex-direction: column;
+    row-gap: 90px;
   }
 }
 @media (min-width: 767px) and (max-width: 1023px) {
   #topTHREE {
-    display: flex;
     flex-direction: column;
+    row-gap: 90px;
   }
 }
 #topTHREE #left {
-  margin-top: 4em;
+  display: flex;
+  flex-direction: column;
+  row-gap: 40px;
 }
 #topTHREE #left #texts {
   display: flex;
   flex-direction: column;
-  margin-left: 2em;
-}
-@media (min-width: 300px) and (max-width: 399px) {
-  #topTHREE #left #texts {
-    margin-left: 0;
-  }
-}
-@media (min-width: 399px) and (max-width: 767px) {
-  #topTHREE #left #texts {
-    margin-left: 0;
-  }
 }
 @media (min-width: 767px) and (max-width: 1023px) {
   #topTHREE #left #texts {
-    margin-left: 0;
     align-items: center;
   }
 }
 #topTHREE #left #texts #one {
   font-size: 40px;
   font-weight: 700;
-  color: rgb(77, 139, 85);
+  color: #4d8b55;
 }
 @media (min-width: 300px) and (max-width: 399px) {
   #topTHREE #left #texts #one {
     font-size: 22px;
     text-align: center;
-    margin-left: 0;
   }
 }
 @media (min-width: 399px) and (max-width: 767px) {
   #topTHREE #left #texts #one {
     font-size: 32px;
     text-align: center;
-    margin-left: 0;
   }
 }
 @media (min-width: 1023px) and (max-width: 1439px) {
@@ -599,33 +588,30 @@
 #topTHREE #left #texts #two {
   font-size: 40px;
   font-weight: 700;
-  color: rgb(0, 0, 0);
+  color: #000000;
 }
 @media (min-width: 300px) and (max-width: 399px) {
   #topTHREE #left #texts #two {
     font-size: 22px;
     text-align: center;
-    margin-left: 0;
   }
 }
 @media (min-width: 399px) and (max-width: 767px) {
   #topTHREE #left #texts #two {
     font-size: 32px;
     text-align: center;
-    margin-left: 0;
   }
 }
 @media (min-width: 1023px) and (max-width: 1439px) {
   #topTHREE #left #texts #two {
     font-size: 33px;
-    margin-left: 0;
   }
 }
 #topTHREE #left #texts #three {
-  width: min(100% - 4em, 40em);
-  margin-top: 2em;
+  width: 80%;
+  margin-top: 25px;
   font-size: 18px;
-  color: rgb(0, 0, 0);
+  color: #000000;
   text-align: justify;
 }
 @media (min-width: 300px) and (max-width: 399px) {
@@ -636,7 +622,6 @@
 }
 @media (min-width: 399px) and (max-width: 767px) {
   #topTHREE #left #texts #three {
-    width: min(100% - 4em, 30em);
     font-size: 13px;
     align-self: center;
   }
@@ -657,29 +642,32 @@
   }
 }
 #topTHREE #left #contact {
-  margin: 3em 0 0 2em;
+  display: flex;
+  flex-direction: row;
+  column-gap: 45px;
+  align-items: center;
+  width: fit-content;
 }
 @media (min-width: 300px) and (max-width: 399px) {
   #topTHREE #left #contact {
     display: flex;
     flex-direction: column;
-    margin-left: 0;
-    align-items: center;
+    row-gap: 25px;
+    align-self: center;
   }
 }
 @media (min-width: 399px) and (max-width: 767px) {
   #topTHREE #left #contact {
     display: flex;
     flex-direction: row;
-    margin-left: 0;
-    justify-content: center;
+    align-self: center;
   }
 }
 @media (min-width: 767px) and (max-width: 1023px) {
   #topTHREE #left #contact {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    align-self: center;
   }
 }
 #topTHREE #left #contact p {
@@ -688,7 +676,6 @@
 }
 @media (min-width: 300px) and (max-width: 399px) {
   #topTHREE #left #contact p {
-    margin-right: 1em;
     font-size: 14px;
   }
 }
@@ -710,122 +697,83 @@
 #topTHREE #left #contact #download {
   display: flex;
   flex-direction: row;
+  column-gap: 10px;
   align-items: center;
-  margin-left: 1em;
-}
-@media (min-width: 300px) and (max-width: 399px) {
-  #topTHREE #left #contact #download {
-    margin-left: 0;
-  }
-}
-@media (min-width: 399px) and (max-width: 767px) {
-  #topTHREE #left #contact #download {
-    margin: 0 1em 0 0;
-  }
-}
-@media (min-width: 767px) and (max-width: 1023px) {
-  #topTHREE #left #contact #download {
-    margin: 0 2em 0 0;
-  }
-}
-#topTHREE #left #contact #download:hover {
   cursor: pointer;
 }
 #topTHREE #left #contact #download #pic {
   background-image: url("../images/download.svg");
   width: 21px;
   height: 21px;
-  margin-right: 1em;
 }
 #topTHREE #left #contact #call {
   display: flex;
   flex-direction: row;
+  column-gap: 10px;
   align-items: center;
-  margin: 1em 0 0 1em;
-}
-@media (min-width: 300px) and (max-width: 399px) {
-  #topTHREE #left #contact #call {
-    margin: 1.4em 0 0 0;
-  }
-}
-@media (min-width: 399px) and (max-width: 767px) {
-  #topTHREE #left #contact #call {
-    margin-top: 0;
-  }
-}
-@media (min-width: 767px) and (max-width: 1023px) {
-  #topTHREE #left #contact #call {
-    margin-top: 0;
-  }
-}
-#topTHREE #left #contact #call:hover {
   cursor: pointer;
 }
 #topTHREE #left #contact #call #pic {
   background-image: url("../images/call.svg");
   width: 21px;
   height: 21px;
-  margin-right: 0.7em;
 }
 #topTHREE #left #buttons {
   display: flex;
   flex-direction: row;
-  margin: 3em 0 4.5em 1em;
+  column-gap: 40px;
+  width: 100%;
+  height: 80%;
 }
 @media (min-width: 300px) and (max-width: 399px) {
   #topTHREE #left #buttons {
     flex-direction: column;
+    row-gap: 20px;
     align-items: center;
-    margin: 3em 0 0 0;
-  }
-}
-@media (min-width: 399px) and (max-width: 767px) {
-  #topTHREE #left #buttons {
-    justify-content: space-evenly;
-    margin: 3em 0 0 0;
   }
 }
 @media (min-width: 767px) and (max-width: 1023px) {
   #topTHREE #left #buttons {
-    justify-content: space-evenly;
-    margin: 3em 0 0 0;
+    justify-content: center;
   }
 }
 #topTHREE #left #buttons #read {
-  width: 17.5em;
-  height: 3.5em;
-  margin-left: 1em;
-  transition: all 0.5s ease;
+  width: inherit;
+  height: inherit;
   border: none;
   border-radius: 40px;
-  background-color: rgb(123, 255, 141);
+  background-color: #7bff8d;
   font-size: 13px;
   color: #1d1d1d;
 }
 #topTHREE #left #buttons #read:hover {
   cursor: pointer;
-  background-color: rgb(109, 223, 124);
+  background-color: #6ddf7c;
 }
 @media (min-width: 300px) and (max-width: 399px) {
   #topTHREE #left #buttons #read {
-    width: 14em;
-    margin-left: 0;
+    width: 100%;
+    height: 60px;
   }
 }
 @media (min-width: 399px) and (max-width: 767px) {
   #topTHREE #left #buttons #read {
-    width: 15em;
+    width: 360px;
+    height: 60px;
+  }
+}
+@media (min-width: 767px) and (max-width: 1023px) {
+  #topTHREE #left #buttons #read {
+    width: 360px;
+    height: 60px;
   }
 }
 #topTHREE #left #buttons #shop {
-  width: 17.5em;
-  height: 3.5em;
-  margin-left: 3em;
-  transition: all 0.5s ease;
-  position: relative;
+  width: inherit;
+  height: inherit;
   border: none;
   border-radius: 40px;
-  background-color: rgb(60, 60, 60);
+  background-color: #3c3c3c;
   font-size: 13px;
   color: rgb(244, 244, 244);
 }
@@ -835,14 +783,20 @@
 }
 @media (min-width: 300px) and (max-width: 399px) {
   #topTHREE #left #buttons #shop {
-    width: 14em;
-    margin: 2em 0 0 0;
+    width: 100%;
+    height: 60px;
   }
 }
 @media (min-width: 399px) and (max-width: 767px) {
   #topTHREE #left #buttons #shop {
-    width: 15em;
-    margin-right: 1em;
+    width: 360px;
+    height: 60px;
+  }
+}
+@media (min-width: 767px) and (max-width: 1023px) {
+  #topTHREE #left #buttons #shop {
+    width: 360px;
+    height: 60px;
   }
 }
 #topTHREE #right {
