--- a/scss/_topTHREE.scss
+++ b/scss/_topTHREE.scss
@@ -1,62 +1,53 @@
 #topTHREE {
   display: flex;
   flex-direction: row;
-  position: relative;
-  width: inherit;
-  height: auto;
-  background-color: rgb(255, 255, 255);
+  column-gap: 90px;
+  width: 100%;
+  height: fit-content;
+  padding: 30px 20px 30px 20px;
+  background-color: #ffffff;
 
   @include breakPoints(small) {
-    display: flex;
     flex-direction: column;
+    row-gap: 90px;
   }
 
   @include breakPoints(mobile) {
-    display: flex;
     flex-direction: column;
+    row-gap: 90px;
   }
 
   @include breakPoints(tablet) {
-    display: flex;
     flex-direction: column;
+    row-gap: 90px;
   }
 
   #left {
-    margin-top: 4em;
+    display: flex;
+    flex-direction: column;
+    row-gap: 40px;
 
     #texts {
       display: flex;
       flex-direction: column;
-      margin-left: 2em;
-
-      @include breakPoints(small) {
-        margin-left: 0;
-      }
-
-      @include breakPoints(mobile) {
-        margin-left: 0;
-      }
 
       @include breakPoints(tablet) {
-        margin-left: 0;
         align-items: center;
       }
 
       #one {
         font-size: 40px;
         font-weight: 700;
-        color: rgb(77, 139, 85);
+        color: #4d8b55;
 
         @include breakPoints(small) {
           font-size: 22px;
           text-align: center;
-          margin-left: 0;
         }
 
         @include breakPoints(mobile) {
           font-size: 32px;
           text-align: center;
-          margin-left: 0;
         }
 
         @include breakPoints(laptop) {
@@ -67,31 +58,28 @@
       #two {
         font-size: 40px;
         font-weight: 700;
-        color: rgb(0, 0, 0);
+        color: #000000;
 
         @include breakPoints(small) {
           font-size: 22px;
           text-align: center;
-          margin-left: 0;
         }
 
         @include breakPoints(mobile) {
           font-size: 32px;
           text-align: center;
-          margin-left: 0;
         }
 
         @include breakPoints(laptop) {
           font-size: 33px;
-          margin-left: 0;
         }
       }
 
       #three {
-        width: min(100% - 4em, 40em);
-        margin-top: 2em;
+        width: 80%;
+        margin-top: 25px;
         font-size: 18px;
-        color: rgb(0, 0, 0);
+        color: #000000;
         text-align: justify;
 
         @include breakPoints(small) {
@@ -100,7 +88,6 @@
         }
 
         @include breakPoints(mobile) {
-          width: min(100% - 4em, 30em);
           font-size: 13px;
           align-self: center;
         }
@@ -120,26 +107,29 @@
     }
 
     #contact {
-      margin: 3em 0 0 2em;
+      display: flex;
+      flex-direction: row;
+      column-gap: 45px;
+      align-items: center;
+      width: fit-content;
 
       @include breakPoints(small) {
         display: flex;
         flex-direction: column;
-        margin-left: 0;
-        align-items: center;
+        row-gap: 25px;
+        align-self: center;
       }
 
       @include breakPoints(mobile) {
         display: flex;
         flex-direction: row;
-        margin-left: 0;
-        justify-content: center;
+        align-self: center;
       }
 
       @include breakPoints(tablet) {
         display: flex;
         flex-direction: row;
-        justify-content: center;
+        align-self: center;
       }
 
       p {
@@ -147,7 +137,6 @@
         font-weight: 700;
 
         @include breakPoints(small) {
-          margin-right: 1em;
           font-size: 14px;
         }
 
@@ -167,60 +156,28 @@
       #download {
         display: flex;
         flex-direction: row;
+        column-gap: 10px;
         align-items: center;
-        margin-left: 1em;
-
-        @include breakPoints(small) {
-          margin-left: 0;
-        }
-
-        @include breakPoints(mobile) {
-          margin: 0 1em 0 0;
-        }
-
-        @include breakPoints(tablet) {
-          margin: 0 2em 0 0;
-        }
-
-        &:hover {
-          cursor: pointer;
-        }
+        cursor: pointer;
 
         #pic {
           background-image: url('../images/download.svg');
           width: 21px;
           height: 21px;
-          margin-right: 1em;
         }
       }
 
       #call {
         display: flex;
         flex-direction: row;
+        column-gap: 10px;
         align-items: center;
-        margin: 1em 0 0 1em;
-
-        @include breakPoints(small) {
-          margin: 1.4em 0 0 0;
-        }
-
-        @include breakPoints(mobile) {
-          margin-top: 0;
-        }
-
-        @include breakPoints(tablet) {
-          margin-top: 0;
-        }
-
-        &:hover {
-          cursor: pointer;
-        }
+        cursor: pointer;
 
         #pic {
           background-image: url('../images/call.svg');
           width: 21px;
           height: 21px;
-          margin-right: 0.7em;
         }
       }
     }
@@ -228,59 +185,56 @@
     #buttons {
       display: flex;
       flex-direction: row;
-      margin: 3em 0 4.5em 1em;
+      column-gap: 40px;
+      width: 100%;
+      height: 80%;
 
       @include breakPoints(small) {
         flex-direction: column;
+        row-gap: 20px;
         align-items: center;
-        margin: 3em 0 0 0;
-      }
-
-      @include breakPoints(mobile) {
-        justify-content: space-evenly;
-        margin: 3em 0 0 0;
       }
 
       @include breakPoints(tablet) {
-        justify-content: space-evenly;
-        margin: 3em 0 0 0;
+        justify-content: center;
       }
 
       #read {
-        width: 17.5em;
-        height: 3.5em;
-        margin-left: 1em;
-        transition: all 0.5s ease;
+        width: inherit;
+        height: inherit;
         border: none;
         border-radius: 40px;
-        background-color: rgb(123, 255, 141);
+        background-color: #7bff8d;
         font-size: 13px;
         color: #1d1d1d;
 
         &:hover {
           cursor: pointer;
-          background-color: rgb(109, 223, 124);
+          background-color: #6ddf7c;
         }
 
         @include breakPoints(small) {
-          width: 14em;
-          margin-left: 0;
+          width: 100%;
+          height: 60px;
         }
 
         @include breakPoints(mobile) {
-          width: 15em;
+          width: 360px;
+          height: 60px;
+        }
+
+        @include breakPoints(tablet) {
+          width: 360px;
+          height: 60px;
         }
       }
 
       #shop {
-        width: 17.5em;
-        height: 3.5em;
-        margin-left: 3em;
-        transition: all 0.5s ease;
-        position: relative;
+        width: inherit;
+        height: inherit;
         border: none;
         border-radius: 40px;
-        background-color: rgb(60, 60, 60);
+        background-color: #3c3c3c;
         font-size: 13px;
         color: rgb(244, 244, 244);
 
@@ -290,13 +244,18 @@
         }
 
         @include breakPoints(small) {
-          width: 14em;
-          margin: 2em 0 0 0;
+          width: 100%;
+          height: 60px;
         }
 
         @include breakPoints(mobile) {
-          width: 15em;
-          margin-right: 1em;
+          width: 360px;
+          height: 60px;
+        }
+
+        @include breakPoints(tablet) {
+          width: 360px;
+          height: 60px;
         }
       }
     }
