--- a/css/main.css
+++ b/css/main.css
@@ -525,7 +525,7 @@
 #topTHREE {
   display: flex;
   flex-direction: row;
-  column-gap: 90px;
+  column-gap: 4%;
   width: 100%;
   height: fit-content;
   padding: 30px 20px 30px 20px;
@@ -553,6 +553,12 @@
   display: flex;
   flex-direction: column;
   row-gap: 40px;
+  width: 58%;
+}
+@media (min-width: 300px) and (max-width: 1023px) {
+  #topTHREE #left {
+    width: 100%;
+  }
 }
 #topTHREE #left #texts {
   display: flex;
@@ -738,8 +744,8 @@
   }
 }
 #topTHREE #left #buttons #read {
-  width: inherit;
-  height: inherit;
+  width: 360px;
+  height: 60px;
   border: none;
   border-radius: 40px;
   background-color: #7bff8d;
@@ -769,8 +775,8 @@
   }
 }
 #topTHREE #left #buttons #shop {
-  width: inherit;
-  height: inherit;
+  width: 360px;
+  height: 60px;
   border: none;
   border-radius: 40px;
   background-color: #3c3c3c;
@@ -802,20 +808,15 @@
 #topTHREE #right {
   display: flex;
   flex-direction: column;
+  width: 38%;
   align-items: center;
   position: relative;
   align-self: center;
 }
-@media (min-width: 767px) and (max-width: 1023px) {
-  #topTHREE #right {
-    margin-top: 3em;
-  }
-}
 #topTHREE #right #pic {
   background-image: url("../images/pouringBEANS.jpg");
-  width: 25em;
-  height: 25em;
-  margin-right: 2em;
+  width: 350px;
+  height: 350px;
   background-repeat: no-repeat;
   background-size: contain;
   align-self: center;
@@ -824,32 +825,24 @@
   #topTHREE #right #pic {
     width: 16em;
     height: 16em;
-    margin: 10em 0 3em 0;
   }
 }
 @media (min-width: 399px) and (max-width: 767px) {
   #topTHREE #right #pic {
     width: 18em;
     height: 18em;
-    margin: 9em 0 3em 0;
   }
 }
 @media (min-width: 767px) and (max-width: 1023px) {
   #topTHREE #right #pic {
     width: 20em;
     height: 20em;
-    margin: 3em 0 3em 0;
   }
 }
 @media (min-width: 1023px) and (max-width: 1439px) {
   #topTHREE #right #pic {
     width: 23em;
     height: 23em;
-  }
-}
-@media (min-width: 1350px) {
-  #topTHREE #right #pic {
-    margin-right: 4em;
   }
 }
 #topTHREE #right #pic #one {
