--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,16 +1,16 @@
-@import '../scss/_mediaQuery.scss';
-@import '../scss/_container.scss';
-@import '../scss/_navMob.scss';
-@import '../scss/_topONE.scss';
-@import '../scss/_topTWO.scss';
-@import '../scss/_topTHREE.scss';
-@import '../scss/_midONE.scss';
-@import '../scss/_midTWO.scss';
-@import '../scss/_midTHREE.scss';
-@import '../scss/_midFOUR.scss';
-@import '../scss/_bottomONE.scss';
-@import '../scss/_bottomTWO.scss';
-@import '../scss/_bottomTHREE.scss';
+@import '../scss/_A-mediaQuery.scss';
+@import '../scss/_B-container.scss';
+@import '../scss/_C-navMob.scss';
+@import '../scss/_D-topOne.scss';
+@import '../scss/_E-topTwo.scss';
+@import '../scss/_F-topThree.scss';
+@import '../scss/_G-midOne.scss';
+@import '../scss/_H-midTWO.scss';
+@import '../scss/_I-midTHREE.scss';
+@import '../scss/_J-midFOUR.scss';
+@import '../scss/_K-bottomONE.scss';
+@import '../scss/_L-bottomTWO.scss';
+@import '../scss/_M-bottomTHREE.scss';
 
 * {
   margin: 0;
